fix z-index

--- a/src/css/search_filters.css
+++ b/src/css/search_filters.css
@@ -234,7 +234,7 @@
     transform: scaleY(0);
     transform-origin: center top;
     overflow: hidden;
-    z-index: 1;
+    z-index: 10000;
 }
 
 .ss-content.ss-relative {
